tests/pass/index_dyn_pass.vir
// Positive test: dynamic word indexing should compile without errors.
mod GoodIndexing {
    incoming arr : Word[8]
    incoming idx : Word[3]
    outgoing out : Bit

    out := arr[dyn idx]
}

// Word[1] indexed by Word[0] (2^0 = 1).
mod IndexByZero {
    incoming arr : Word[1]
    incoming idx : Word[0]
    outgoing out : Bit

    out := arr[dyn idx]
}

// Constant index parsed as dynamic, arr: Word[8], 5 fits in Word[3].
mod IndexByConstant {
    incoming arr : Word[8]
    outgoing out : Bit

    out := arr[5]
}

// CHECK: Check OK
